kubernetes/apps/developer-tools/atuin/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /healthz
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - atuin.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: atuin
          port: 8888
